<resources>
    <string name="app_name">Calculator</string>

    <string name="action_settings">Settings</string>
    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <string name="gpa_txt">GPA</string>
    <string name="cgpa_txt">CGPA</string>
    <string name="personalize_txt">Personalize</string>
    <string name="profile_txt">My Profile</string>
    <string name="home_txt">Home</string>
    <string name="about_txt">About</string>
    <string name="help_txt">Help and feedback</string>
    <string name="user_name">User</string>
    <string name="user_desc">College student</string>
    <string name="profile_edit_image">Profile Image</string>
    <string name="enter_name_txt">Enter your name</string>
    <string name="about_you_txt">About you</string>
    <string name="save_txt">SAVE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_txt">Logout</string>
    <string name="app_name_display">CGPA Calculator</string>
    <string name="app_version">Version: 2.0.5\nBubbleGum</string>
    <string name="feedback_text">Give your feedback!</string>
    <string name="feed_desc_msg">Glad you are here. You can send feedback or share any bug if you come across, to the developer. Share and support the app. Thanks!</string>
    <string name="btn_login">LOGIN</string>
    <string name="forget_pass_txt"><u>Forgot password?</u></string>
    <string name="btn_register"><u>Register Now</u></string>
    <string name="login_box_name">Enter your name</string>
    <string name="reg_email_pass">Enter your email id</string>
    <string name="reg_box_password">Enter a password</string>
    <string name="btn_register_text">Register</string>
    <string name="btn_pass_req">Request password</string>
    <string name="profile_edit_control">Account control</string>
    <string name="account_txt">Account</string>
    <string name="new_password_text_again">Retype new password</string>
    <string name="new_password_text">Enter new password</string>
    <string name="btn_change_pass">Change</string>
    <string name="change_pass_txt">Change password</string>
    <string name="action_done">Done</string>
    <string name="result_header_text">Your GPA is</string>
    <string name="others_txt">Others</string>
    <string name="details_text">My Details</string>
    <string name="gpa_frag_cgpa_text">Your CGPA is %f</string>
    <string name="result_act_credits">Credits</string>
    <string name="result_act_curr_cgpa">Current CGPA</string>
    <string name="result_act_points_earned">Points earned</string>
    <string name="result_act_points_total">Total points</string>
    <string name="result_btn_save">Save</string>
    <string name="more_txt">More</string>
    <string name="points_txt">Points</string>
    <string name="pointstxt_display" formatted="false">Points earned : %d\nTotal points : %f</string>
    <string name="fragment_login_header">Login</string>
    <string name="fragment_login_univbox">University no</string>
    <string name="fragment_login_passbox">Password</string>
    <string name="fragment_login_forgot_password">Forgot password?</string>
    <string name="fragment_forgot_password_header">Forgot?</string>
    <string name="fragment_register_header">Create your profile</string>
    <string name="card_register_header">Create your profile</string>
    <string name="card_register_box_name">Name</string>
    <string name="card_register_box_no">University no</string>
    <string name="card_register_box_email">Email id</string>
    <string name="card_register_box_pass">Password</string>
    <string name="card_forgot_pass_box_no">University no</string>
    <string name="card_forgot_pass_header">Forgot?</string>
    <string name="card_forgot_pass_box_email">Email Id</string>
    <string name="card_forgot_pass_box_button">Request</string>
    <string name="card_forgot_pass_note">Note : The password will be mailed to your email address associated with your account.</string>
    <string name="card_register_text_choose_spinner_item">Choose your department :</string>
    <string name="profile_reset_account_head">Reset account</string>
    <string name="profile_reset_account_desc">Resets all your semester, grade points and credits record of your account.</string>
    <string name="profile_reset_button">Reset</string>
    <string name="profile_generate_button">Generate</string>
    <string name="profile_generate_head">Profile card</string>
    <string name="profile_generate_desc">Generate a profile card so that you can share it in your resume or CV or with others.</string>
    <string name="profile_delete_account_head">Delete account</string>
    <string name="profile_delete_button">Delete</string>
    <string name="profile_delete_account_desc">Delete your account permanently.</string>
    <string name="nav_menu_profile_text">My Profile</string>
    <string name="profile_header">My Profile</string>
    <string name="navigation_header_image_desc">User profile picture</string>
    <string name="app_desc">Cgpa calculator icon</string>
    <string name="old_password_text">Enter current password</string>
    <string name="arrears_txt">Arrears</string>
    <string name="details_no_arrear_txt">You have no arrears!</string>
    <string name="no_internet_text">Oops!\n No Internet connection</string>
    <string name="try_again_text">TRY AGAIN</string>
    <string name="profile_offline_package_head">Offline package</string>
    <string name="profile_download_button">Download</string>
    <string name="profile_offline_package_desc">Allows you to use the app even while you are offline. Any changes made to your scores are automatically synced when you get online again.</string>
    <string name="profile_update_download_button">Update</string>
    <string name="about_header_two">App by</string>
    <string name="app_author">App by Abarajithan Lv</string>
    <string name="ad_public_key">your-ad-public-key</string>
    <string name="about_contribute">Contribute to this project</string>
    <string name="about_like_rate">Like</string>
    <string name="about_share_friends">Share with friends</string>
    <string name="about_more_apps">More apps</string>
    <string name="contribute_sheet_head">Contribute to this project</string>
    <string name="contribute_sheet_head_desc">Thanks for your interest. You may contact me via any one of the following regarding the development of this project. You will get listed in the developer section of this project which includes Android app, iOS app and Website. You may also include this project in your resume. Waiting for your confirmation!</string>
    <string name="contribute_share_mail">Gmail</string>
    <string name="contribute_twitter">Twitter</string>
    <string name="contribute_gplus">Google plus</string>
    <string name="contribute_sheet_desc_two">Leave a quick message</string>
    <string name="contribute_message_hint">Message (with your contact info)</string>
    <string name="contribute_sheet_desc_three">OR</string>
    <string name="login_to_status">(Login or Register to maintain your profile)</string>
    <string name="login_to_button">Login now</string>
</resources>
