<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingStart="16dp"
    android:paddingTop="@dimen/nav_header_padding_top">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/header_user_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_avatar"
        app:civ_fill_color="@color/white" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_user_image"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/header_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/header_user_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_desc"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/action_edit_profile"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignBottom="@+id/linearLayout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/navigation_header_image_desc"
        android:padding="8dp"
        android:src="@drawable/ic_content_edit" />
</RelativeLayout>