<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="4dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/about_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:paddingTop="@dimen/app_bar_padding"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/app_desc"
                    android:src="@drawable/ic_logo_splash" />

                <com.abara.calculator.util.MaterialTextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:padding="4dp"
                    android:text="@string/app_name_display"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#3e3e3e" />

                <com.abara.calculator.util.MaterialTextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/app_version"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

            <include layout="@layout/activity_about_details" />

            <com.abara.calculator.util.MaterialTextView
                android:id="@+id/materialTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:lineSpacingExtra="4dp"
                android:clickable="true"
                android:onClick="onAuthorClick"
                android:text="@string/app_author"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
