<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/contribute_sheet_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:padding="16dp"
        android:src="@drawable/ic_navigation_close" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.abara.calculator.util.MaterialTextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/contribute_sheet_head"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/material_black" />

            <com.abara.calculator.util.MaterialTextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/contribute_sheet_head_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/material_black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.abara.calculator.util.MaterialTextViewRegular
                    android:id="@+id/materialTextViewRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/contribute_sheet_desc_two"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/material_black" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/accent"
                    android:theme="@style/Theme.EditText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/contribute_quick_send_box"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginStart="16dp"
                        android:gravity="start"
                        android:hint="@string/contribute_message_hint"
                        android:inputType="text"
                        android:textColor="@color/material_black"
                        android:textColorHint="@color/accent"
                        android:theme="@style/Theme.EditText" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/contribute_quick_send_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:src="@drawable/ic_send" />

                <com.abara.calculator.util.MaterialTextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/contribute_sheet_desc_three"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/material_black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/gmail_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:src="@drawable/ic_gmail" />

                    <com.abara.calculator.util.MaterialTextViewRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/contribute_share_mail"
                        android:textColor="@color/material_black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/twitter_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:src="@drawable/ic_twitter" />

                    <com.abara.calculator.util.MaterialTextViewRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/contribute_twitter"
                        android:textColor="@color/material_black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gplus_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:src="@drawable/ic_gplus" />

                    <com.abara.calculator.util.MaterialTextViewRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/contribute_gplus"
                        android:textColor="@color/material_black" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>