<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/contribute_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="onContributeClick"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingEnd="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp"
        android:paddingTop="16dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_contribute" />

        <com.abara.calculator.util.MaterialTextViewRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/about_contribute" />

    </LinearLayout>
    <!-- Separator -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/grey_text" />


    <LinearLayout
        android:id="@+id/share_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="onShareClick"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingEnd="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp"
        android:paddingTop="16dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_share_friends" />

        <com.abara.calculator.util.MaterialTextViewRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/about_share_friends" />

    </LinearLayout>
    <!-- Separator -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/grey_text" />

    <LinearLayout
        android:id="@+id/like_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="onClickRateNow"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingEnd="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp"
        android:paddingTop="16dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_like_rate" />

        <com.abara.calculator.util.MaterialTextViewRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/about_like_rate" />

    </LinearLayout>
    <!-- Separator -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/grey_text" />

    <LinearLayout
        android:id="@+id/more_apps_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="onClickMoreApps"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingEnd="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp"
        android:paddingTop="16dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_more_apps" />

        <com.abara.calculator.util.MaterialTextViewRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/about_more_apps" />

    </LinearLayout>
    <!-- Separator -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/grey_text" />

</LinearLayout>